# transduce

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  transduce.example.yaml
.docs/: development-plan.md
.docs/adr/: 0001-record-architecture-decisions.md  0002-manifest-format-toml.md  0003-nli-model-minicheck-ft5.md  0004-signing-sigstore-optional-in-v0-5.md  template.md
.github/workflows/: ci.yml
docs/: migration-v0-to-v0.5.md  observability.md  overview.md  pitch.md  system-design.md
docs/api/: openapi-v1.json
src/transduce/: __init__.py
src/transduce/api/: __init__.py  app.py  errors.py  handlers.py  schemas.py  state.py
src/transduce/backends/: __init__.py  anthropic.py  base.py  concurrency.py  factory.py  litellm_router.py  ollama.py  openai_compat.py  preconditions.py
src/transduce/budget/: __init__.py  budgeter.py
src/transduce/cli/: __init__.py  __main__.py  main.py
src/transduce/config/: __init__.py  loader.py  schema.py
src/transduce/diff/: __init__.py  word_level.py
src/transduce/injection/: __init__.py  fence.py  scanner.py
src/transduce/language/: __init__.py  detector.py
src/transduce/observability/: __init__.py  attributes.py  redaction.py  spans.py
src/transduce/pipeline/: __init__.py  composition.py  orchestrator.py  streaming.py
src/transduce/registry/: __init__.py  allowlist.py  manifest.py  sandbox.py  seed_modes.py  signing.py  spec.py  static.py
src/transduce/streaming/: __init__.py  client.py
src/transduce/verification/: __init__.py  base.py  composite.py  cosine.py  dates.py  hhem.py  length.py  negation.py  nli.py  pipeline.py  preservation.py
tests/: conftest.py
tests/eval/: README.md  build_composition_corpus.py  build_corpus.py  injection_attacks_v0_1.jsonl  loader.py  test_corpus_shape.py  transduce_composition_v0_1.jsonl  transduce_faithfulness_v0_1.jsonl  transduce_faithfulness_v0_2.jsonl
tests/fixtures/: date_pairs.json  entity_pairs.json  negation_pairs.json  number_pairs.json  text_pairs.json  url_pairs.json
tests/fixtures/manifest_modes/formal-to-warm/: mode.toml
tests/fixtures/manifest_modes/formal-to-warm/prompts/: formal-to-warm.j2
tests/helpers/: corpora.py
tests/integration/: test_transform_real_ollama.py
tests/unit/: test_fixtures.py  test_meta.py
tests/unit/api/: test_handlers.py  test_openapi_freeze.py  test_schemas.py  test_streaming_endpoint.py
tests/unit/backends/: test_anthropic.py  test_base.py  test_concurrency.py  test_factory.py  test_litellm_router.py  test_ollama.py  test_openai_compat.py  test_preconditions.py  test_streaming.py
tests/unit/budget/: test_budgeter.py
tests/unit/config/: test_loader.py
tests/unit/diff/: test_word_level.py
tests/unit/injection/: test_fence.py  test_scanner.py
tests/unit/language/: test_detector.py
tests/unit/observability/: __init__.py  test_attributes.py  test_orchestrator_spans.py  test_redaction.py  test_spans.py
tests/unit/pipeline/: test_composition.py  test_orchestrator.py
tests/unit/registry/: test_allowlist.py  test_manifest.py  test_multiversion.py  test_sandbox.py  test_signing.py  test_spec.py  test_static.py
tests/unit/streaming/: __init__.py  test_client.py
tests/unit/verification/: test_composite.py  test_cosine.py  test_dates.py  test_hhem.py  test_length.py  test_negation.py  test_nli.py  test_pipeline.py  test_preservation.py
tools/: freeze_openapi.py
